Add content and style for sidebar

--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
 <body>
     <div id="container">
-        <div id="sidebar">
-
+        <div id="sidebar" class="white">
+            <div id="title" class="heavy big">
+                <img src="images/view-dashboard.svg" alt="dashboard" class="icon">
+                Dashboard
+            </div>
+            <ul id="nav-main" class="bold">
+                <li><img src="images/home.svg" alt="home" class="icon">Home</li>
+                <li><img src="images/card-account-details-outline.svg" alt="profile" class="icon">Profile</li>
+                <li><img src="images/message-reply.svg" alt="messages" class="icon">Messages</li>
+                <li><img src="images/clock-time-three.svg" alt="history" class="icon">History</li>
+                <li><img src="images/note-multiple.svg" alt="tasks" class="icon">Tasks</li>
+                <li><img src="images/account-group.svg" alt="communities" class="icon">Communities</li>
+            </ul>
+            <ul id="nav-util" class="bold">
+                <li><img src="images/cog.svg" alt="settings" class="icon">Settings</li>
+                <li><img src="images/help-box.svg" alt="support" class="icon">Support</li>
+                <li><img src="images/shield-check.svg" alt="privacy" class="icon">Privacy</li>
+            </ul>
         </div>
         <div id="header">
 
         </div>
         <div id="main">
-            
+
         </div>
     </div>
 </body>
