Add HTML content for #main grid

--- a/index.html
+++ b/index.html
@@ -17,23 +17,50 @@
                 Dashboard
             </div>
             <ul id="nav-main" class="bold fontLg">
-                <li class="grid icon-2-col"><img src="images/home.svg" alt="home" class="icon">Home</li>
-                <li class="grid icon-2-col"><img src="images/card-account-details-outline.svg" alt="profile" class="icon">Profile</li>
-                <li class="grid icon-2-col"><img src="images/message-reply.svg" alt="messages" class="icon">Messages</li>
-                <li class="grid icon-2-col"><img src="images/clock-time-three.svg" alt="history" class="icon">History</li>
-                <li class="grid icon-2-col"><img src="images/note-multiple.svg" alt="tasks" class="icon">Tasks</li>
-                <li class="grid icon-2-col"><img src="images/account-group.svg" alt="communities" class="icon">Communities</li>
+                <li class="grid icon-2-col">
+                    <img src="images/home.svg" alt="home" class="icon">
+                    Home
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/card-account-details-outline.svg" alt="profile" class="icon">
+                    Profile
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/message-reply.svg" alt="messages" class="icon">
+                    Messages
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/clock-time-three.svg" alt="history" class="icon">
+                    History
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/note-multiple.svg" alt="tasks" class="icon">
+                    Tasks
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/account-group.svg" alt="communities" class="icon">
+                    Communities
+                </li>
             </ul>
             <ul id="nav-util" class="bold fontLg">
-                <li class="grid icon-2-col"><img src="images/cog.svg" alt="settings" class="icon">Settings</li>
-                <li class="grid icon-2-col"><img src="images/help-box.svg" alt="support" class="icon">Support</li>
-                <li class="grid icon-2-col"><img src="images/shield-check.svg" alt="privacy" class="icon">Privacy</li>
+                <li class="grid icon-2-col">
+                    <img src="images/cog.svg" alt="settings" class="icon">
+                    Settings
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/help-box.svg" alt="support" class="icon">
+                    Support
+                </li>
+                <li class="grid icon-2-col">
+                    <img src="images/shield-check.svg" alt="privacy" class="icon">
+                    Privacy
+                </li>
             </ul>
         </div>
         <div id="header" class="grid">
             <div id="header-search" class="grid icon-2-col">
                 <img src="images/magnify.svg" alt="search" class="icon">
-                <input id="search"></input>
+                <input id="search" class="grey-bg"></input>
             </div>
             <div id="header-user" class="grid icon-2-col">
                 <img src="images/bell-ring-outline.svg" alt="alert" class="icon">
@@ -45,7 +72,7 @@
             <div class="grid icon-2-col">
                 <img src="images/user-1.jpg" alt="Randy" class="avatar big">
                 <div class="pad-left">
-                    <p class="fontSm bold">Hi there,</p>
+                    <p class="fontSm bold dark-grey">Hi there,</p>
                     <p class="fontXL bold">Randy Murrow (@randyman)</p>
                 </div>
             </div>
@@ -55,9 +82,126 @@
                 <button class="white blue-bg fontMd">Share</button>
             </div>
         </div>
-        <div id="main">
-
-        </div>
+        <div id="main" class="grid grey-bg">
+            <div id="projects">
+                <span class="fontLg bold dark-grey">Your Projects</span>
+                <ul class="fontMd">
+                    <li>
+                        <div class="bold">
+                            Super Cool Project
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                    <li>
+                        <div class="bold">
+                            Less Cool Project
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                    <li>
+                        <div class="bold">
+                            Impossible App
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                    <li>
+                        <div class="bold">
+                            Easy Peasy App
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                    <li>
+                        <div class="bold">
+                            Ad Blocker
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                    <li>
+                        <div class="bold">
+                            Money Maker
+                        </div>
+                        <div>
+                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                        </div>
+                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                    </li>
+                </ul>
+            </div>
+            <div id="main-right">
+                <span class="fontLg bold dark-grey">Announcements</span>
+                    <ul class="fontSm">
+                        <li>
+                            <div class="bold">Site Maintenance</div>
+                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                        </li>
+                        <li>
+                            <div class="bold">Community Share Day</div>
+                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                        </li>
+                        <li>
+                            <div class="bold">Updated Privacy Policy</div>
+                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                        </li>
+                    </ul>
+                <span class="fontLg bold dark-grey">Trending</span>
+                    <ul class="fontMd">
+                        <li class="grid icon-2-col">
+                            <img src="images/user-2.jpg" alt="Jack" class="avatar">
+                            <div>
+                                <div>@justjack</div>
+                                <div>Money Maker</div>
+                            </div>
+                        </li>
+                        <li class="grid icon-2-col">
+                            <img src="images/user-1.jpg" alt="Randy" class="avatar">
+                            <div>
+                                <div>@randyman</div>
+                                <div>Super Cool Project</div>
+                            </div>
+                        </li>
+                        <li class="grid icon-2-col">
+                            <img src="images/user-3.jpg" alt="Lionel" class="avatar">
+                            <div>
+                                <div>@lionel</div>
+                                <div>World Peace Builder</div>
+                            </div>
+                        </li>
+                        <li class="grid icon-2-col">
+                            <img src="images/user-4.jpg" alt="Chester" class="avatar">
+                            <div>
+                                <div>@chester</div>
+                                <div>No Traffic Maker</div>
+                            </div>
+                        </li>
+                    </ul>
+            </div>
     </div>
 </body>
 </html>
