Layout and style right side of #main

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
             </ul>
         </div>
-        <div id="header" class="grid">
+        <div id="header" class="grid white-bg">
             <div id="header-search" class="grid icon-2-col">
                 <img src="images/magnify.svg" alt="search" class="icon">
                 <input id="search" class="grey-bg"></input>
@@ -72,7 +72,7 @@
             <div class="grid icon-2-col">
                 <img src="images/user-1.jpg" alt="Randy" class="avatar big">
                 <div class="pad-left">
-                    <p class="fontSm bold dark-grey">Hi there,</p>
+                    <p class="fontSm bold grey">Hi there,</p>
                     <p class="fontXL bold">Randy Murrow (@randyman)</p>
                 </div>
             </div>
@@ -84,68 +84,68 @@
         </div>
         <div id="main" class="grid grey-bg">
             <div id="projects">
-                <span class="fontLg bold dark-grey">Your Projects</span>
+                <h2 class="fontLg bold grey">Your Projects</h2>
                 <ul class="fontMd">
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Super Cool Project
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
                         <img src="images/eye-plus-outline.svg" alt="view" class="icon">
                         <img src="images/source-fork.svg" alt="fork" class="icon">
                     </li>
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Less Cool Project
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
                         <img src="images/eye-plus-outline.svg" alt="view" class="icon">
                         <img src="images/source-fork.svg" alt="fork" class="icon">
                     </li>
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Impossible App
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
                         <img src="images/eye-plus-outline.svg" alt="view" class="icon">
                         <img src="images/source-fork.svg" alt="fork" class="icon">
                     </li>
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Easy Peasy App
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
                         <img src="images/eye-plus-outline.svg" alt="view" class="icon">
                         <img src="images/source-fork.svg" alt="fork" class="icon">
                     </li>
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Ad Blocker
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
                         <img src="images/eye-plus-outline.svg" alt="view" class="icon">
                         <img src="images/source-fork.svg" alt="fork" class="icon">
                     </li>
-                    <li>
+                    <li class="white-bg rounded-bg">
                         <div class="bold">
                             Money Maker
                         </div>
-                        <div>
+                        <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
                         <img src="images/star-plus-outline.svg" alt="star" class="icon">
@@ -155,49 +155,61 @@
                 </ul>
             </div>
             <div id="main-right">
-                <span class="fontLg bold dark-grey">Announcements</span>
-                    <ul class="fontSm">
+                <h2 class="fontLg bold grey">Announcements</h2>
+                    <ul id="announcements" class="fontSm white-bg rounded-bg">
                         <li>
-                            <div class="bold">Site Maintenance</div>
-                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                            <div class="bold">
+                                Site Maintenance
+                            </div>
+                            <div class="grey fontXs">
+                                His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.
+                            </div>
                         </li>
                         <li>
-                            <div class="bold">Community Share Day</div>
-                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                            <div class="bold">
+                                Community Share Day
+                            </div>
+                            <div class="grey fontXs">
+                                His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.
+                            </div>
                         </li>
                         <li>
-                            <div class="bold">Updated Privacy Policy</div>
-                            <div>His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.</div>
+                            <div class="bold">
+                                Updated Privacy Policy
+                            </div>
+                            <div class="grey fontXs">
+                                His te natum dolor, sea cu falli ceteros. Eum ex falli admodum. Menandri prodesset eu nec, sit et sanctus incorrupte.
+                            </div>
                         </li>
                     </ul>
-                <span class="fontLg bold dark-grey">Trending</span>
-                    <ul class="fontMd">
+                <h2 class="fontLg bold grey">Trending</h2>
+                    <ul id="trending" class="fontMd white-bg rounded-bg grid">
                         <li class="grid icon-2-col">
                             <img src="images/user-2.jpg" alt="Jack" class="avatar">
                             <div>
-                                <div>@justjack</div>
-                                <div>Money Maker</div>
+                                <div class="semi-bold">@justjack</div>
+                                <div class="grey">Money Maker</div>
                             </div>
                         </li>
                         <li class="grid icon-2-col">
                             <img src="images/user-1.jpg" alt="Randy" class="avatar">
                             <div>
-                                <div>@randyman</div>
-                                <div>Super Cool Project</div>
+                                <div class="semi-bold">@randyman</div>
+                                <div class="grey">Super Cool Project</div>
                             </div>
                         </li>
                         <li class="grid icon-2-col">
                             <img src="images/user-3.jpg" alt="Lionel" class="avatar">
                             <div>
-                                <div>@lionel</div>
-                                <div>World Peace Builder</div>
+                                <div class="semi-bold">@lionel</div>
+                                <div class="grey">World Peace Builder</div>
                             </div>
                         </li>
                         <li class="grid icon-2-col">
                             <img src="images/user-4.jpg" alt="Chester" class="avatar">
                             <div>
-                                <div>@chester</div>
-                                <div>No Traffic Maker</div>
+                                <div class="semi-bold">@chester</div>
+                                <div class="grey">No Traffic Maker</div>
                             </div>
                         </li>
                     </ul>
