Style project area of #main

--- a/index.html
+++ b/index.html
@@ -85,72 +85,84 @@
         <div id="main" class="grid grey-bg">
             <div id="projects">
                 <h2 class="fontLg bold grey">Your Projects</h2>
-                <ul class="fontMd">
-                    <li class="white-bg rounded-bg">
+                <ul class="fontMd grid">
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Super Cool Project
                         </div>
                         <div class="grey">
                             Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
-                    </li>
-                    <li class="white-bg rounded-bg">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">              
+                        </div>
+                     </li>
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Less Cool Project
                         </div>
                         <div class="grey">
-                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                            Est at dolore nullam conclusionemque. Cum dicunt prodesset no, in pro meliore molestiae, quis graeco eleifend eu his. Ea primis bonorum est, usu te affert iisque, eros dissentiet et vel.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </li>
-                    <li class="white-bg rounded-bg">
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Impossible App
                         </div>
                         <div class="grey">
-                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                            Duo no impetus theophrastus. Dico alterum inimicus id vis. Te solet assentior nec, at eam duis vivendum, ex vix porro docendi invenire. Melius epicuri placerat te sed. In summo invenire principes vis, suas prima has at, impetus dissentiet his ut.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </li>
-                    <li class="white-bg rounded-bg">
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Easy Peasy App
                         </div>
                         <div class="grey">
-                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                            Eos eu quem libris dissentiet, eos ex prima possit, sit congue voluptatum ut. Mel ut dolorem omittantur, in homero sanctus copiosae duo. Cu disputationi vituperatoribus sed. Vix ad erant scaevola sensibus, ei quo inani copiosae comprehensam, vel numquam persecuti cu.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </li>
-                    <li class="white-bg rounded-bg">
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Ad Blocker
                         </div>
                         <div class="grey">
-                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                            Te putent aliquid comprehensam vis. Nam probo graece ullamcorper et, duis oratio vel id. Tempor vidisse molestiae vis ne, et summo semper vis. Lorem meliore dissentiet id nec, mei consetetur honestatis ei.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </li>
-                    <li class="white-bg rounded-bg">
+                    <li class="white-bg rounded-bg grid">
                         <div class="bold">
                             Money Maker
                         </div>
                         <div class="grey">
-                            Lorem ipsum dolor sit amet, sed an sonet iriure petentium. Quo dolorem dissentiunt at, usu eu accusata sensibus dissentias, sale disputationi nec cu.
+                            Vim soleat blandit deseruisse et. Nemore impetus inimicus mei ei. Ne nihil choro sea, aliquid omnesque prodesset id est. Ne amet eros mandamus per, te mazim facilisi cum, eum in atqui omnium definitionem.
                         </div>
-                        <img src="images/star-plus-outline.svg" alt="star" class="icon">
-                        <img src="images/eye-plus-outline.svg" alt="view" class="icon">
-                        <img src="images/source-fork.svg" alt="fork" class="icon">
+                        <div class="react">
+                            <img src="images/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="view" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </li>
                 </ul>
             </div>
