Add credit for creator of animal avatar vector graphics to bottom of page

--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                         </li>
                     </ul>
             </div>
+        </div>
+        <div id="credit">
+                Avatar icons <a href="http://www.freepik.com">designed by Terdpongvector / Freepik</a>
+        </div>
     </div>
 </body>
 </html>
