Update target window in index.html for credit link at bottom of the page

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
         </div>
         <div id="credit">
-                Avatar icons <a href="http://www.freepik.com">designed by Terdpongvector / Freepik</a>
+                Avatar icons <a href="http://www.freepik.com" target="_blank">designed by Terdpongvector / Freepik</a>
         </div>
     </div>
 </body>
